--- a/notebooks/implementation_of_algorithms.ipynb
+++ b/notebooks/implementation_of_algorithms.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "0e7542f8",
    "metadata": {},
    "outputs": [],
@@ -47,6 +47,7 @@
     "    f1_score,\n",
     "    roc_auc_score,\n",
     ")\n",
+    "import mahotas\n",
     "\n",
     "from src.data.dataset_filenames import extract_type_face\n",
     "from src.data.utils import is_non_zero_file, get_directory_file_list, resize_img\n",
@@ -230,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "c6fd1736",
+   "execution_count": 15,
+   "id": "2c95aad0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,8 +251,8 @@
     "def ACER_score(y_true, y_pred):\n",
     "    APCER = APCER_score(y_true, y_pred)\n",
     "    BPCER = BPCER_score(y_true, y_pred)\n",
-    "    ACER = (far + frr) / 2\n",
-    "    return hter"
+    "    ACER = (APCER + BPCER) / 2\n",
+    "    return ACER"
    ]
   },
   {
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fc2d8e1",
+   "id": "ccb085e1",
    "metadata": {},
    "source": [
     "## Разбиение набора данных на тренировочную и тестовую выборки"
@@ -396,25 +397,25 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e91df63b",
+   "id": "6b356f6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = []\n",
-    "y = classes.copy()\n",
+    "# X = []\n",
+    "# y = classes.copy()\n",
     "\n",
-    "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
-    "    X.append({\"rgb\": rgb_img, \"thermal\": th_img})"
+    "# for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
+    "#     X.append({\"rgb\": rgb_img, \"thermal\": th_img})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "eed82865",
+   "id": "31da5d90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
    ]
   },
   {
@@ -699,56 +700,192 @@
    "id": "7f90d899",
    "metadata": {},
    "source": [
-    "## Алгоритм Thermal-HeuristicFeatures-SVM with block-wise"
+    "## Алгоритм MC-TAS-SVM with block-wise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "51cd0324",
+   "execution_count": 32,
+   "id": "19e5773f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_funcs = [\n",
-    "    dispersion_feature,\n",
-    "    mean_feature,\n",
-    "    median_feature,\n",
-    "    maximum_feature,\n",
-    "    #     minimum_feature,\n",
-    "    fraction_pixels_for_interval_feature,\n",
-    "    #     scatter_feature,\n",
-    "    #     hist_feauture,\n",
-    "    #     hist_gradient_feauture,\n",
-    "    ratio_upper_lower_parts_feature,\n",
-    "]\n",
+    "feature_funcs = [mahotas.features.tas]\n",
     "\n",
     "X = []\n",
     "y = classes.copy()\n",
     "\n",
-    "for th_img in th_data[\"images\"]:\n",
-    "    X.append(calc_features([th_img], feature_funcs, 9))\n",
+    "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
+    "    X.append(\n",
+    "        calc_features(\n",
+    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img],\n",
+    "\n",
+    "            feature_funcs,\n",
+    "            9\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train_scaled, y_train)\n",
-    "y_pred = svc_lin.predict(X_test_scaled)\n",
+    "# Best estimator:  SVC(C=1, kernel='linear')\n",
+    "# grid_mc_tas_svc = GridSearchCV(\n",
+    "#     estimator=SVC(),\n",
+    "#     param_grid={\n",
+    "#         \"C\": [1e-3, 1e-2, 1e-1, 1, 1e1, 1e2, 13],\n",
+    "#         \"kernel\": (\"linear\", \"rbf\"),\n",
+    "#     },\n",
+    "# )\n",
+    "# grid_mc_tas_svc.fit(X_train, y_train)\n",
+    "# print(\"Best estimator: \", grid_mc_tas_svc.best_estimator_)\n",
+    "# svc = grid_mc_tas_svc\n",
     "\n",
-    "measured_metrics[\"Thermal-HeuristicFeatures-SVM\"] = get_metric_values(\n",
-    "    y_test, y_pred\n",
-    ").values()"
+    "svc = SVC(kernel=\"linear\", C=1e1)\n",
+    "svc.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = svc.predict(X_test)\n",
+    "\n",
+    "measured_metrics[\"MC-TAS-SVM\"] = get_metric_values(y_test, y_pred).values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e0e2569",
+   "metadata": {},
+   "source": [
+    "## Алгоритм Grayscale(RGB)-TAS-SVM with block-wise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "95aff69e",
+   "execution_count": 35,
+   "id": "e1aee210",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_funcs = [mahotas.features.tas]\n",
+    "\n",
+    "X = []\n",
+    "y = classes.copy()\n",
+    "\n",
+    "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
+    "    gray_rgb_img = cv2.cvtColor(rgb_img, cv2.COLOR_RGB2GRAY)\n",
+    "    X.append(\n",
+    "        calc_features(\n",
+    "            [gray_rgb_img],\n",
+    "            feature_funcs,\n",
+    "            9\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "X = np.array(X)\n",
+    "y = np.array(y)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "\n",
+    "\n",
+    "svc = SVC(kernel=\"linear\", C=1e1)\n",
+    "svc.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = svc.predict(X_test)\n",
+    "\n",
+    "measured_metrics[\"Grayscale(RGB)-TAS-SVM\"] = get_metric_values(y_test, y_pred).values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "736d3021",
+   "metadata": {},
+   "source": [
+    "## Алгоритм RGB-TAS-SVM with block-wise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5d30930a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_funcs = [mahotas.features.tas]\n",
+    "\n",
+    "X = []\n",
+    "y = classes.copy()\n",
+    "\n",
+    "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
+    "    X.append(\n",
+    "        calc_features(\n",
+    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2]],\n",
+    "            feature_funcs,\n",
+    "            9\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "X = np.array(X)\n",
+    "y = np.array(y)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "\n",
+    "\n",
+    "svc = SVC(kernel=\"linear\", C=1e1)\n",
+    "svc.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = svc.predict(X_test)\n",
+    "\n",
+    "measured_metrics[\"RGB-TAS-SVM\"] = get_metric_values(y_test, y_pred).values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf559709",
+   "metadata": {},
+   "source": [
+    "## Алгоритм Thermal-TAS-SVM with block-wise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "9bf5b0f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def customtas(img, thresh=35):\n",
+    "    return mahotas.features.pftas(img, T=thresh)\n",
+    "\n",
+    "feature_funcs = [customtas]\n",
+    "\n",
+    "X = []\n",
+    "y = classes.copy()\n",
+    "\n",
+    "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
+    "    X.append(\n",
+    "        calc_features(\n",
+    "            [th_img],\n",
+    "            feature_funcs,\n",
+    "            9\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "X = np.array(X)\n",
+    "y = np.array(y)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "\n",
+    "svc = SVC(kernel=\"linear\", C=1e1)\n",
+    "svc.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = svc.predict(X_test)\n",
+    "\n",
+    "measured_metrics[\"Thermal-TAS-SVM\"] = get_metric_values(y_test, y_pred).values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1088cb6e",
    "metadata": {},
    "outputs": [
     {
@@ -773,113 +910,94 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Metric</th>\n",
-       "      <th>RGB-RDWT-Haralick-SVM</th>\n",
-       "      <th>Thermal-RDWT-Haralick-SVM</th>\n",
-       "      <th>MC-RDWT-Haralick-SVM</th>\n",
-       "      <th>RGB-LBP-SVM</th>\n",
-       "      <th>Thermal-LBP-SVM</th>\n",
-       "      <th>MC-LBP-SVM</th>\n",
-       "      <th>Thermal-HeuristicFeatures-SVM</th>\n",
+       "      <th>MC-TAS-SVM</th>\n",
+       "      <th>Grayscale(RGB)-TAS-SVM</th>\n",
+       "      <th>RGB-TAS-SVM</th>\n",
+       "      <th>Thermal-TAS-SVM</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Accuracy</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>APCER</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>BPCER</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.010309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ACER</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.005155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AUC ROC</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.994845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>Precision</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.982456</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>5</th>\n",
        "      <td>Recall</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>F1</td>\n",
+       "      <th>6</th>\n",
+       "      <td>F1-Measure</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ROC-AUC</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>HTER</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.991150</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Metric  RGB-RDWT-Haralick-SVM  Thermal-RDWT-Haralick-SVM  \\\n",
-       "0   Accuracy                    1.0                        1.0   \n",
-       "1  Precision                    1.0                        1.0   \n",
-       "2     Recall                    1.0                        1.0   \n",
-       "3         F1                    1.0                        1.0   \n",
-       "4    ROC-AUC                    1.0                        1.0   \n",
-       "5       HTER                    0.0                        0.0   \n",
+       "       Metric  MC-TAS-SVM  Grayscale(RGB)-TAS-SVM  RGB-TAS-SVM  \\\n",
+       "0       APCER         0.0                     0.0          0.0   \n",
+       "1       BPCER         0.0                     0.0          0.0   \n",
+       "2        ACER         0.0                     0.0          0.0   \n",
+       "3     AUC ROC         1.0                     1.0          1.0   \n",
+       "4   Precision         1.0                     1.0          1.0   \n",
+       "5      Recall         1.0                     1.0          1.0   \n",
+       "6  F1-Measure         1.0                     1.0          1.0   \n",
        "\n",
-       "   MC-RDWT-Haralick-SVM  RGB-LBP-SVM  Thermal-LBP-SVM  MC-LBP-SVM  \\\n",
-       "0                   1.0          1.0              1.0         1.0   \n",
-       "1                   1.0          1.0              1.0         1.0   \n",
-       "2                   1.0          1.0              1.0         1.0   \n",
-       "3                   1.0          1.0              1.0         1.0   \n",
-       "4                   1.0          1.0              1.0         1.0   \n",
-       "5                   0.0          0.0              0.0         0.0   \n",
-       "\n",
-       "   Thermal-HeuristicFeatures-SVM  \n",
-       "0                            1.0  \n",
-       "1                            1.0  \n",
-       "2                            1.0  \n",
-       "3                            1.0  \n",
-       "4                            1.0  \n",
-       "5                            0.0  "
+       "   Thermal-TAS-SVM  \n",
+       "0         0.000000  \n",
+       "1         0.010309  \n",
+       "2         0.005155  \n",
+       "3         0.994845  \n",
+       "4         0.982456  \n",
+       "5         1.000000  \n",
+       "6         0.991150  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "744adecb",
+   "id": "a8c29c79",
    "metadata": {},
    "outputs": [],
    "source": []
