--- a/notebooks/implementation_of_algorithms.ipynb
+++ b/notebooks/implementation_of_algorithms.ipynb
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2c95aad0",
+   "id": "dc30b781",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb085e1",
+   "id": "516db4f8",
    "metadata": {},
    "source": [
     "## Разбиение набора данных на тренировочную и тестовую выборки"
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6b356f6b",
+   "id": "d4dcd8fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "31da5d90",
+   "id": "3ed388d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 120,
    "id": "1f377726",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 114,
    "id": "36eb3220",
    "metadata": {},
    "outputs": [],
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 123,
    "id": "8e7cb04f",
    "metadata": {},
    "outputs": [],
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "19e5773f",
+   "id": "52aa99bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e0e2569",
+   "id": "ae259d94",
    "metadata": {},
    "source": [
     "## Алгоритм Grayscale(RGB)-TAS-SVM with block-wise"
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e1aee210",
+   "id": "bb71466b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "736d3021",
+   "id": "c3c5ccca",
    "metadata": {},
    "source": [
     "## Алгоритм RGB-TAS-SVM with block-wise"
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5d30930a",
+   "id": "53b814ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf559709",
+   "id": "8f63ce56",
    "metadata": {},
    "source": [
     "## Алгоритм Thermal-TAS-SVM with block-wise"
@@ -848,14 +848,11 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "9bf5b0f4",
+   "id": "5a24a3c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def customtas(img, thresh=35):\n",
-    "    return mahotas.features.pftas(img, T=thresh)\n",
-    "\n",
-    "feature_funcs = [customtas]\n",
+    "feature_funcs = [mahotas.features.tas]\n",
     "\n",
     "X = []\n",
     "y = classes.copy()\n",
@@ -884,132 +881,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "1088cb6e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Metric</th>\n",
-       "      <th>MC-TAS-SVM</th>\n",
-       "      <th>Grayscale(RGB)-TAS-SVM</th>\n",
-       "      <th>RGB-TAS-SVM</th>\n",
-       "      <th>Thermal-TAS-SVM</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>APCER</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>BPCER</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.010309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ACER</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.005155</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AUC ROC</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.994845</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Precision</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.982456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Recall</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>F1-Measure</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.991150</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Metric  MC-TAS-SVM  Grayscale(RGB)-TAS-SVM  RGB-TAS-SVM  \\\n",
-       "0       APCER         0.0                     0.0          0.0   \n",
-       "1       BPCER         0.0                     0.0          0.0   \n",
-       "2        ACER         0.0                     0.0          0.0   \n",
-       "3     AUC ROC         1.0                     1.0          1.0   \n",
-       "4   Precision         1.0                     1.0          1.0   \n",
-       "5      Recall         1.0                     1.0          1.0   \n",
-       "6  F1-Measure         1.0                     1.0          1.0   \n",
-       "\n",
-       "   Thermal-TAS-SVM  \n",
-       "0         0.000000  \n",
-       "1         0.010309  \n",
-       "2         0.005155  \n",
-       "3         0.994845  \n",
-       "4         0.982456  \n",
-       "5         1.000000  \n",
-       "6         0.991150  "
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "measured_metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a8c29c79",
+   "id": "e0b33ac2",
    "metadata": {},
    "outputs": [],
    "source": []
