--- a/notebooks/implementation_of_algorithms.ipynb
+++ b/notebooks/implementation_of_algorithms.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 149,
    "id": "0e7542f8",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,7 @@
     "    precision_score,\n",
     "    f1_score,\n",
     "    roc_auc_score,\n",
+    "    make_scorer\n",
     ")\n",
     "import mahotas\n",
     "\n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "id": "9a263af2",
    "metadata": {},
    "outputs": [],
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 129,
    "id": "53c4a708",
    "metadata": {},
    "outputs": [],
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 130,
    "id": "da16e766",
    "metadata": {},
    "outputs": [],
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
    "id": "bf57a12b",
    "metadata": {},
    "outputs": [],
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 132,
    "id": "78be0cc1",
    "metadata": {},
    "outputs": [],
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 133,
    "id": "a502080a",
    "metadata": {},
    "outputs": [],
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 134,
    "id": "dc30b781",
    "metadata": {},
    "outputs": [],
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 135,
    "id": "ac6ab68e",
    "metadata": {},
    "outputs": [],
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 136,
    "id": "0485905d",
    "metadata": {},
    "outputs": [],
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 137,
    "id": "4d66ece8",
    "metadata": {},
    "outputs": [],
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 138,
    "id": "cf8db982",
    "metadata": {},
    "outputs": [
@@ -377,7 +378,7 @@
        "4  Precision"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,23 +706,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "52aa99bf",
+   "execution_count": 229,
+   "id": "4818f1c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_funcs = [mahotas.features.tas]\n",
+    "def pftas_warp(img, T = 30):\n",
+    "    return mahotas.features.pftas(img, T)\n",
+    "\n",
+    "# feature_funcs = [mahotas.features.pftas]\n",
+    "feature_funcs = [pftas_warp]\n",
     "\n",
     "X = []\n",
     "y = classes.copy()\n",
     "\n",
     "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
+    "    gray_rgb_img = cv2.cvtColor(rgb_img, cv2.COLOR_RGB2GRAY)\n",
     "    X.append(\n",
     "        calc_features(\n",
-    "            [rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img],\n",
-    "\n",
-    "            feature_funcs,\n",
-    "            9\n",
+    "#             channels=[rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img],\n",
+    "#             channels=[gray_rgb_img],\n",
+    "#             channels=[rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2]],\n",
+    "            channels=[th_img],\n",
+    "            feature_funcs=feature_funcs,\n",
+    "            blockwise=9\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -730,20 +738,17 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "# Best estimator:  SVC(C=1, kernel='linear')\n",
-    "# grid_mc_tas_svc = GridSearchCV(\n",
-    "#     estimator=SVC(),\n",
-    "#     param_grid={\n",
-    "#         \"C\": [1e-3, 1e-2, 1e-1, 1, 1e1, 1e2, 13],\n",
-    "#         \"kernel\": (\"linear\", \"rbf\"),\n",
-    "#     },\n",
-    "# )\n",
-    "# grid_mc_tas_svc.fit(X_train, y_train)\n",
-    "# print(\"Best estimator: \", grid_mc_tas_svc.best_estimator_)\n",
-    "# svc = grid_mc_tas_svc\n",
-    "\n",
-    "svc = SVC(kernel=\"linear\", C=1e1)\n",
-    "svc.fit(X_train, y_train)\n",
+    "grid_mc_tas_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='f1',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
+    "grid_mc_tas_svc.fit(X_train, y_train)\n",
+    "print(\"Best estimator: \", grid_mc_tas_svc.best_estimator_)\n",
+    "svc = grid_mc_tas_svc\n",
     "\n",
     "y_pred = svc.predict(X_test)\n",
     "\n",
