--- a/notebooks/implementation_of_algorithms.ipynb
+++ b/notebooks/implementation_of_algorithms.ipynb
@@ -216,10 +216,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plt.imshow(rgb_data[\"images\"][52])\n",
-    "# plt.show()\n",
-    "# plt.imshow(th_data[\"images\"][52], cmap=\"gray\")\n",
-    "# plt.show()"
+    "plt.imshow(rgb_data[\"images\"][52])\n",
+    "plt.show()\n",
+    "plt.imshow(th_data[\"images\"][52], cmap=\"gray\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -448,13 +448,10 @@
     "y = np.array(y)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train_scaled, y_train)\n",
-    "y_pred = svc_lin.predict(X_test_scaled)\n",
+    "svc_lin.fit(X_train, y_train)\n",
+    "y_pred = svc_lin.predict(X_test)\n",
     "\n",
     "measured_metrics[\"RGB-RDWT-Haralick-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -484,13 +481,10 @@
     "y = np.array(y)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train_scaled, y_train)\n",
-    "y_pred = svc_lin.predict(X_test_scaled)\n",
+    "svc_lin.fit(X_train, y_train)\n",
+    "y_pred = svc_lin.predict(X_test)\n",
     "\n",
     "measured_metrics[\"Thermal-RDWT-Haralick-SVM\"] = get_metric_values(\n",
     "    y_test, y_pred\n",
@@ -528,13 +522,10 @@
     "y = np.array(y)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train_scaled, y_train)\n",
-    "y_pred = svc_lin.predict(X_test_scaled)\n",
+    "svc_lin.fit(X_train, y_train)\n",
+    "y_pred = svc_lin.predict(X_test)\n",
     "\n",
     "measured_metrics[\"MC-RDWT-Haralick-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -565,13 +556,10 @@
     "y = np.array(y)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train_scaled, y_train)\n",
-    "y_pred = svc_lin.predict(X_test_scaled)\n",
+    "svc_lin.fit(X_train, y_train)\n",
+    "y_pred = svc_lin.predict(X_test)\n",
     "\n",
     "measured_metrics[\"Grayscale(RGB)-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -601,13 +589,10 @@
     "y = np.array(y)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train_scaled, y_train)\n",
-    "y_pred = svc_lin.predict(X_test_scaled)\n",
+    "svc_lin.fit(X_train, y_train)\n",
+    "y_pred = svc_lin.predict(X_test)\n",
     "\n",
     "measured_metrics[\"Thermal-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -643,13 +628,10 @@
     "y = np.array(y)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train_scaled, y_train)\n",
-    "y_pred = svc_lin.predict(X_test_scaled)\n",
+    "svc_lin.fit(X_train, y_train)\n",
+    "y_pred = svc_lin.predict(X_test)\n",
     "\n",
     "measured_metrics[\"RGB-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -685,13 +667,10 @@
     "y = np.array(y)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train_scaled, y_train)\n",
-    "y_pred = svc_lin.predict(X_test_scaled)\n",
+    "svc_lin.fit(X_train, y_train)\n",
+    "y_pred = svc_lin.predict(X_test)\n",
     "\n",
     "measured_metrics[\"MC-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -711,11 +690,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pftas_warp(img, T = 30):\n",
-    "    return mahotas.features.pftas(img, T)\n",
-    "\n",
-    "# feature_funcs = [mahotas.features.pftas]\n",
-    "feature_funcs = [pftas_warp]\n",
+    "feature_funcs = [mahotas.features.tas]\n",
     "\n",
     "X = []\n",
     "y = classes.copy()\n",
@@ -724,10 +699,7 @@
     "    gray_rgb_img = cv2.cvtColor(rgb_img, cv2.COLOR_RGB2GRAY)\n",
     "    X.append(\n",
     "        calc_features(\n",
-    "#             channels=[rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img],\n",
-    "#             channels=[gray_rgb_img],\n",
-    "#             channels=[rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2]],\n",
-    "            channels=[th_img],\n",
+    "            channels=[rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img],\n",
     "            feature_funcs=feature_funcs,\n",
     "            blockwise=9\n",
     "        )\n",
@@ -790,8 +762,7 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "\n",
-    "svc = SVC(kernel=\"linear\", C=1e1)\n",
+    "svc = SVC(kernel=\"linear\", C=1)\n",
     "svc.fit(X_train, y_train)\n",
     "\n",
     "y_pred = svc.predict(X_test)\n",
@@ -833,8 +804,7 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "\n",
-    "svc = SVC(kernel=\"linear\", C=1e1)\n",
+    "svc = SVC(kernel=\"linear\", C=1)\n",
     "svc.fit(X_train, y_train)\n",
     "\n",
     "y_pred = svc.predict(X_test)\n",
@@ -876,7 +846,7 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc = SVC(kernel=\"linear\", C=1e1)\n",
+    "svc = SVC(kernel=\"linear\", C=1)\n",
     "svc.fit(X_train, y_train)\n",
     "\n",
     "y_pred = svc.predict(X_test)\n",
