--- a/notebooks/implementation_of_algorithms.ipynb
+++ b/notebooks/implementation_of_algorithms.ipynb
@@ -449,9 +449,20 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train, y_train)\n",
-    "y_pred = svc_lin.predict(X_test)\n",
+    "grid_rgb_rdwt_haralick_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "grid_rgb_rdwt_haralick_svc.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best estimator: \", grid_rgb_rdwt_haralick_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_rgb_rdwt_haralick_svc.predict(X_test)\n",
     "\n",
     "measured_metrics[\"RGB-RDWT-Haralick-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -482,9 +493,20 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train, y_train)\n",
-    "y_pred = svc_lin.predict(X_test)\n",
+    "grid_th_rdwt_haralick_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "grid_th_rdwt_haralick_svc.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best estimator: \", grid_th_rdwt_haralick_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_th_rdwt_haralick_svc.predict(X_test)\n",
     "\n",
     "measured_metrics[\"Thermal-RDWT-Haralick-SVM\"] = get_metric_values(\n",
     "    y_test, y_pred\n",
@@ -523,9 +545,20 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train, y_train)\n",
-    "y_pred = svc_lin.predict(X_test)\n",
+    "grid_mc_rdwt_haralick_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "grid_mc_rdwt_haralick_svc.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best estimator: \", grid_mc_rdwt_haralick_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_mc_rdwt_haralick_svc.predict(X_test)\n",
     "\n",
     "measured_metrics[\"MC-RDWT-Haralick-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -557,9 +590,20 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train, y_train)\n",
-    "y_pred = svc_lin.predict(X_test)\n",
+    "grid_gsrgb_lbp_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "grid_gsrgb_lbp_svc.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best estimator: \", grid_gsrgb_lbp_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_gsrgb_lbp_svc.predict(X_test)\n",
     "\n",
     "measured_metrics[\"Grayscale(RGB)-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -590,9 +634,20 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train, y_train)\n",
-    "y_pred = svc_lin.predict(X_test)\n",
+    "grid_th_lbp_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "grid_th_lbp_svc.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best estimator: \", grid_th_lbp_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_th_lbp_svc.predict(X_test)\n",
     "\n",
     "measured_metrics[\"Thermal-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -629,9 +684,20 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train, y_train)\n",
-    "y_pred = svc_lin.predict(X_test)\n",
+    "grid_rgb_lbp_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "grid_rgb_lbp_svc.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best estimator: \", grid_rgb_lbp_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_rgb_lbp_svc.predict(X_test)\n",
     "\n",
     "measured_metrics[\"RGB-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -668,63 +734,22 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc_lin = SVC(kernel=\"linear\", C=1e2)\n",
-    "svc_lin.fit(X_train, y_train)\n",
-    "y_pred = svc_lin.predict(X_test)\n",
-    "\n",
-    "measured_metrics[\"MC-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7f90d899",
-   "metadata": {},
-   "source": [
-    "## Алгоритм MC-TAS-SVM with block-wise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "id": "4818f1c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature_funcs = [mahotas.features.tas]\n",
-    "\n",
-    "X = []\n",
-    "y = classes.copy()\n",
-    "\n",
-    "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
-    "    gray_rgb_img = cv2.cvtColor(rgb_img, cv2.COLOR_RGB2GRAY)\n",
-    "    X.append(\n",
-    "        calc_features(\n",
-    "            channels=[rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img],\n",
-    "            feature_funcs=feature_funcs,\n",
-    "            blockwise=9\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "X = np.array(X)\n",
-    "y = np.array(y)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "\n",
-    "grid_mc_tas_svc = GridSearchCV(\n",
+    "grid_mc_lbp_svc = GridSearchCV(\n",
     "    estimator=SVC(),\n",
-    "    scoring='f1',\n",
+    "    scoring='precision',\n",
     "    param_grid={\n",
     "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
     "        \"kernel\": (\"linear\", \"rbf\"),\n",
     "    },\n",
     ")\n",
-    "grid_mc_tas_svc.fit(X_train, y_train)\n",
-    "print(\"Best estimator: \", grid_mc_tas_svc.best_estimator_)\n",
-    "svc = grid_mc_tas_svc\n",
     "\n",
-    "y_pred = svc.predict(X_test)\n",
+    "grid_mc_lbp_svc.fit(X_train, y_train)\n",
     "\n",
-    "measured_metrics[\"MC-TAS-SVM\"] = get_metric_values(y_test, y_pred).values()"
+    "print(\"Best estimator: \", grid_mc_lbp_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_mc_lbp_svc.predict(X_test)\n",
+    "\n",
+    "measured_metrics[\"MC-LBP-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
   },
   {
@@ -762,10 +787,19 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc = SVC(kernel=\"linear\", C=1)\n",
-    "svc.fit(X_train, y_train)\n",
+    "grid_gsrgb_tas_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
+    "grid_gsrgb_tas_svc.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = svc.predict(X_test)\n",
+    "print(\"Best estimator: \", grid_gsrgb_tas_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_gsrgb_tas_svc.predict(X_test)\n",
     "\n",
     "measured_metrics[\"Grayscale(RGB)-TAS-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -804,10 +838,20 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc = SVC(kernel=\"linear\", C=1)\n",
-    "svc.fit(X_train, y_train)\n",
+    "grid_rgb_tas_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
     "\n",
-    "y_pred = svc.predict(X_test)\n",
+    "grid_rgb_tas_svc.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best estimator: \", grid_rgb_tas_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_rgb_tas_svc.predict(X_test)\n",
     "\n",
     "measured_metrics[\"RGB-TAS-SVM\"] = get_metric_values(y_test, y_pred).values()"
    ]
@@ -846,18 +890,90 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "svc = SVC(kernel=\"linear\", C=1)\n",
-    "svc.fit(X_train, y_train)\n",
+    "grid_th_tas_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
     "\n",
-    "y_pred = svc.predict(X_test)\n",
+    "grid_th_tas_svc.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best estimator: \", grid_th_tas_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_th_tas_svc.predict(X_test)\n",
     "\n",
     "measured_metrics[\"Thermal-TAS-SVM\"] = get_metric_values(y_test, y_pred).values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afed64c3",
+   "metadata": {},
+   "source": [
+    "## Алгоритм MC-TAS-SVM with block-wise"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e0b33ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_funcs = [mahotas.features.tas]\n",
+    "\n",
+    "X = []\n",
+    "y = classes.copy()\n",
+    "\n",
+    "for rgb_img, th_img in zip(rgb_data[\"images\"], th_data[\"images\"]):\n",
+    "    gray_rgb_img = cv2.cvtColor(rgb_img, cv2.COLOR_RGB2GRAY)\n",
+    "    X.append(\n",
+    "        calc_features(\n",
+    "            channels=[rgb_img[:, :, 0], rgb_img[:, :, 1], rgb_img[:, :, 2], th_img],\n",
+    "            feature_funcs=feature_funcs,\n",
+    "            blockwise=9\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "X = np.array(X)\n",
+    "y = np.array(y)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "\n",
+    "grid_mc_tas_svc = GridSearchCV(\n",
+    "    estimator=SVC(),\n",
+    "    scoring='precision',\n",
+    "    param_grid={\n",
+    "        \"C\": [1e-3, 1e-2, 1e-1, 1, 10e2, 1e3],\n",
+    "        \"kernel\": (\"linear\", \"rbf\"),\n",
+    "    },\n",
+    ")\n",
+    "grid_mc_tas_svc.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best estimator: \", grid_mc_tas_svc.best_estimator_)\n",
+    "\n",
+    "y_pred = grid_mc_tas_svc.predict(X_test)\n",
+    "\n",
+    "measured_metrics[\"MC-TAS-SVM\"] = get_metric_values(y_test, y_pred).values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94651895",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measured_metrics.to_csv(path_to_metrics_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15097868",
    "metadata": {},
    "outputs": [],
    "source": []
